kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: wanderlust
  labels: 
    name: development
