kubernetes/backend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sourabhlodhi/wanderlust-backend:110
        ports:
        - containerPort: 8080
        resources:
          requests: 
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 20
