kubernetes/mongo-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  serviceName: mongodb-service
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
