kubernetes/backend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-svc
  namespace: wanderlust
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
