kubernetes/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: wanderlust
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "aks-wanderlust-nodes"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
