kubernetes/loadbalancer-services.yml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-frontend
  namespace: wanderlust
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "aks-wanderlust-nodes"
spec:
  type: LoadBalancer
  loadBalancerIP: 4.156.254.126
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 5173
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-backend
  namespace: wanderlust
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "aks-wanderlust-nodes"
spec:
  type: LoadBalancer
  loadBalancerIP: 4.156.254.126
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
