kubernetes/mongo-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo-service
  namespace: wanderlust
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:  
    app: mongo
